# data_intelligence_agent

./: .gitignore  README.md  agent.py  instructions.py  main.py  pyproject.toml  tools.py
src/data_intelligence_agent/: agent.py  model.py  root_prompt.py
src/data_intelligence_agent/agents/analytics/: agent.py  prompt.py
src/data_intelligence_agent/agents/bigquery/: agent.py  prompts.py
src/data_intelligence_agent/tools/: orchestration.py
src/data_intelligence_agent/tools/bigquery/: client.py  discovery.py  execute_sql.py  schema.py  session.py
sub_agents/: __init__.py
sub_agents/analytics/: agent.py  prompts.py
subagents/bigquery/: agent.py  prompts.py  tools.py
tests/bigquery/: test_schema.py
utils/: utils.py
